package com.company;

public class CaseVide extends Case{

    public CaseVide(){
        super("CaseVide");
    }

}
