package com.company.board;

import com.company.heroes.Hero;

public interface Interact {
    void interact(Hero hero, Board board);
}