package com.company.ennemis;

public class Dragon extends Ennemi{

    public Dragon(){
        super("Dragon",15 , 4);
    }
}
