package com.company.ennemis;

public class Gobelin extends Ennemi{

    public Gobelin(int num){
        super("Gobelin", 6, 1, num);
    }
}
