package com.company.ennemis;

public class Sorcier extends Ennemi{

    public Sorcier(){
        super("Sorcier", 9, 2);
    }
}
