package com.company.potions;

import com.company.personnages.Perso;

public class BigPotion extends Potion{

    public BigPotion(){

        super("BigPotion", 5);
    }
}
