package com.company.spells;

public class Eclair extends Spell{

    public Eclair(){
        super("Eclair", 2);
    }
}
