package com.company.spells;

import com.company.personnages.Perso;
import com.company.personnages.Wizard;

public class Fire extends Spell{

    public Fire(){
        super("Fire", 7);
    }
}
