@startuml

title __WARRIORS's Class Diagram__\n

  namespace  {
    namespace om.company {
      abstract class com.company.plateau.Case {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.plateau.CaseVide {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Game {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      interface com.company.plateau.Interact {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Main {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Menu {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.PersonnageHorsPlateauException {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.plateau.Plateau {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace bdd {
        class com.company.bdd.Connexion {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        class com.company.ennemis.Dragon {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        abstract class com.company.ennemis.Ennemi {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        class com.company.ennemis.Gobelin {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        class com.company.ennemis.Sorcier {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace personnages {
        abstract class com.company.personnages.Perso {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace personnages {
        class com.company.personnages.Warrior {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace personnages {
        class com.company.personnages.Wizard {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace potions {
        class com.company.potions.BigPotion {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace potions {
        abstract class com.company.potions.Potion {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace potions {
        class com.company.potions.StandardPotion {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace spells {
        class com.company.spells.Eclair {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace spells {
        class com.company.spells.Fire {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace spells {
        abstract class com.company.spells.Spell {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace weapons {
        class com.company.weapons.Epee {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace weapons {
        class com.company.weapons.Massue {
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace weapons {
        abstract class com.company.weapons.Weapon {
        }
      }
    }
  }
  

  com.company.plateau.Case .up.|> com.company.plateau.Interact
  com.company.plateau.CaseVide -up-|> com.company.plateau.Case
  com.company.Game o-- com.company.plateau.Plateau : plateau
  com.company.plateau.Plateau -up-|> com.company.plateau.Case
  com.company.ennemis.Dragon -up-|> com.company.ennemis.Ennemi
  com.company.ennemis.Ennemi -up-|> com.company.plateau.Case
  com.company.ennemis.Gobelin -up-|> com.company.ennemis.Ennemi
  com.company.ennemis.Sorcier -up-|> com.company.ennemis.Ennemi
  com.company.personnages.Perso o-- com.company.potions.Potion : potion
  com.company.personnages.Warrior -up-|> com.company.personnages.Perso
  com.company.personnages.Warrior o-- com.company.weapons.Weapon : weapon
  com.company.personnages.Wizard -up-|> com.company.personnages.Perso
  com.company.personnages.Wizard o-- com.company.spells.Spell : spell
  com.company.potions.BigPotion -up-|> com.company.potions.Potion
  com.company.potions.Potion -up-|> com.company.plateau.Case
  com.company.potions.StandardPotion -up-|> com.company.potions.Potion
  com.company.spells.Eclair -up-|> com.company.spells.Spell
  com.company.spells.Fire -up-|> com.company.spells.Spell
  com.company.spells.Spell -up-|> com.company.plateau.Case
  com.company.weapons.Epee -up-|> com.company.weapons.Weapon
  com.company.weapons.Massue -up-|> com.company.weapons.Weapon
  com.company.weapons.Weapon -up-|> com.company.plateau.Case


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
